fixed word breaks in long chat msgs

--- a/src/main/resources/static/css/chat.css
+++ b/src/main/resources/static/css/chat.css
@@ -32,6 +32,7 @@ td.message {
 }
 
 .chat-message-from-user {
+    word-break: break-word;
     color: white;
     background-color: rgb(75 52 16 / 40%);
     margin-top: 6px;
